--- a/Css Basics/cssbasic.html
+++ b/Css Basics/cssbasic.html
@@ -8,9 +8,54 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="box-1">
-      <h1>Hello World</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, odit.</p>
+    <div class="containter">
+      <div class="box-1">
+        <h1>Hello World</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nam
+          minus voluptatum iure quae incidunt laudantium assumenda at neque
+          vitae, aut non dolore minima voluptatibus eius autem facere. Optio
+          velit perspiciatis modi laborum consequatur repudiandae quis. Optio
+          consectetur blanditiis voluptate harum placeat libero omnis assumenda
+          perspiciatis. Suscipit pariatur laborum tempora!
+        </p>
+      </div>
+      <div class="box-2">
+        <h1>Goodbye</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nam
+          minus voluptatum iure quae incidunt laudantium assumenda at neque
+          vitae, aut non dolore minima voluptatibus eius autem facere. Optio
+          velit perspiciatis modi laborum consequatur repudiandae quis. Optio
+          consectetur blanditiis voluptate harum placeat libero omnis assumenda
+          perspiciatis. Suscipit pariatur laborum tempora!
+        </p>
+      </div>
+      <div class="categories">
+        <h2>Categories</h2>
+        <ul>
+          <li><a href="">Category 1</a></li>
+          <li><a href="">Category 2</a></li>
+          <li><a href="">Category 3</a></li>
+          <li><a href="">Category 4</a></li>
+        </ul>
+      </div>
+      <form class="my-form">
+        <div class="form group">
+            <label>Name:</label>
+            <input type="text" name="name">
+        </div>
+        <div class="form group">
+            <label>email:</label>
+            <input type="text" name="email">
+        </div>
+        <div class="form group">
+            <label>message:</label>
+            <textarea name="message"></textarea>
+        </div>
+        <input class="button" type="submit" value="submit" name="">
+      </form>
     </div>
+    <div style="margin-top: 500px;"></div>
   </body>
 </html>
