--- a/Promises/index.html
+++ b/Promises/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="app.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-</head> 
+</head>
 <body>
-    <h1 class="title">Dang Dinh Tien</h1>
-    <button onclick = "toggleDark()">Click Me</button>
+    <h1>Subscription Status: <span class="status"></span></h1>
+    <h1>Video: <span class="video"></span></h1>
 </body>
 </html>
